# vst-plugin-pack

./: .gitignore  CLAUDE.md  JOURNAL.md  NOISE_GATE_PLAN.md
jazz_chorus_amp/: CMakeLists.txt
jazz_chorus_amp/Source/: ChorusEffect.cpp  ChorusEffect.h  CustomKnob.cpp  CustomKnob.h  JazzChorusDSP.cpp  JazzChorusDSP.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
midi_bass_guitar/: CMakeLists.txt
midi_bass_guitar/Source/: BassEffects.cpp  BassEffects.h  BassSamplerEngine.cpp  BassSamplerEngine.h  BassVoice.cpp  BassVoice.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
orange_amp_simulator/: CMakeLists.txt
orange_amp_simulator/Source/: AmpSimDSP.cpp  AmpSimDSP.h  CustomKnob.cpp  CustomKnob.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
simple_gain_plugin/: CMakeLists.txt
simple_gain_plugin/source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
